# redir

./: README.md  justfile
native/: .metadata  pubspec.yaml
native/android/app/: build.gradle
native/android/app/src/main/: AndroidManifest.xml
native/android/app/src/main/kotlin/com/example/redir/: MainActivity.kt
native/ios/Runner/: Info.plist
native/ios/Runner.xcodeproj/: project.pbxproj
native/linux/: CMakeLists.txt
native/macos/Runner.xcodeproj/: project.pbxproj
native/macos/Runner/Configs/: AppInfo.xcconfig
native/web/: manifest.json
native/windows/: CMakeLists.txt
native/windows/runner/: Runner.rc
redir/: README.md
redir-server/: Cargo.toml
redir-web/: package.json
redir/linux/: my_application.cc
redir/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
redir/test/: widget_test.dart
redir/web/: index.html
redir/windows/runner/: main.cpp
server/: .gitignore  Cargo.toml  diesel.toml
server/config/src/: lib.rs
server/database/: Cargo.toml
server/database/src/: auth.rs  database.rs  lib.rs  schema.rs
server/database/src/models/: access.rs  mod.rs  url_data.rs  user.rs
server/migrations/2023-05-19-073315_init/: down.sql  up.sql
server/migrations/2023-05-19-080609_salt/: down.sql  up.sql
server/models/: Cargo.toml
server/models/src/: access.rs  url_data.rs  user.rs
server/proc/: Cargo.toml
server/proc/src/: lib.rs
server/redir/: Cargo.toml
web/: pnpm-lock.yaml
