[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
config = { path = "../config" }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.4", features = ["sqlite", "chrono"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }
bcrypt = "0.14.0"
rand = "0.8.5"
hex = "0.4.3"
log = "0.4.17"
